@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2021, 2023 Obeo.
+ * Copyright (c) 2021, 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -10,8 +10,7 @@
  * Contributors:
  *     Obeo - initial API and implementation
  *******************************************************************************/
-import React from 'react';
-import { WorkbenchViewSide } from './Workbench.types';
+import { WorkbenchViewContribution, WorkbenchViewSide } from './Workbench.types';
 
 export interface SiteProps {
   editingContextId: string;
@@ -19,5 +18,5 @@ export interface SiteProps {
   side: WorkbenchViewSide;
   expanded: boolean;
   toggleExpansion: () => void;
-  contributions: React.ReactElement[];
+  contributions: WorkbenchViewContribution[];
 }
