@@ -85,6 +85,7 @@ image:doc/screenshots/deploymenDiagram.png[Deployment Diagram,70%]
 - [core] Ignore empty changes of kind ChangeKind.NOTHING
 - https://github.com/eclipse-sirius/sirius-web/issues/3020[#3020] [sirius-web] Improve the project browser to make the code more robust
 - https://github.com/eclipse-sirius/sirius-web/issues/3021[#3021] [sirius-web] Leverage the new Spring Boot APIs to create the sirius-web-starter autoconfiguration
+- https://github.com/eclipse-sirius/sirius-web/issues/3020[#3020] [sirius-web] Simplify the contribution of views in the workbench
 
 
 == v2024.1.0
